--- a/strategic-stakeholder-communication.html
+++ b/strategic-stakeholder-communication.html
@@ -23,19 +23,8 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
     .section {
       padding: 2rem 1rem;
-    }
-    .instructions {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
     }
     .week {
       background-color: white;
@@ -47,7 +36,6 @@
     }
     .week h4 {
       color: var(--primary);
-      margin-bottom: 0.5rem;
     }
     .footer {
       background-color: var(--primary);
@@ -62,12 +50,12 @@
 
   <header>
     <h1><i class="fas fa-handshake"></i> Strategic Stakeholder Communication</h1>
-    <p>PROJECT CORE - Soft Skills Short Course - Research</p>
+    <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
   <main class="container section">
-    <div class="instructions">
-      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+    <div class="instructions" style="background: #fff3cd; border-left: 6px solid #ffc107; padding: 1rem; margin-bottom: 2rem; border-radius: 8px;">
+      <p><i class="fas fa-info-circle"></i> <strong>Please read before starting:</strong></p>
       <ul>
         <li>Complete each week in order — finish video, activity, and quiz.</li>
         <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
@@ -80,55 +68,110 @@
     <div class="week">
       <h4>Week 1: Who Are Our Stakeholders, and Why Do They Matter?</h4>
       <p><strong>Objective:</strong> Understand the landscape of external stakeholders (e.g. regulators, partners, communities, suppliers).</p>
-      <p><strong>Video:</strong> Who Are External Stakeholders?; Internal vs External Stakeholders in Business</p>
-      <p><strong>Reading:</strong> What Are Stakeholders? Definition, Types, and Examples</p>
-      <p><strong>Quiz:</strong> Match stakeholders to influence types; basic terminology Q&As</p>
-      <p><strong>Main Activity:</strong> Pick one external stakeholder group, answer key questions (importance, impact, positive relationship actions).</p>
-      <p><strong>Other Handovers:</strong> <a href="https://www.mural.co/templates/stakeholder-mapping" target="_blank">Stakeholder Mapping Template</a></p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/GOzaUpTYSxs')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/w84w4UO0UdI')">Watch Video</a></p>
+      <p><strong>🎥 Video 3:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/HP2MZscvFl8')">Watch Video</a></p>
+      <p><strong>📖 Reading:</strong> <a href="https://www.investopedia.com/terms/s/stakeholder.asp" target="_blank">What Are Stakeholders? Definition, Types, and Examples</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Match stakeholders / Q&As</a></p>
+      <p><strong>📝 Main Activity:</strong> Pick one external stakeholder group (e.g., suppliers, regulators, community). Answer:</p>
+      <ul>
+        <li>What is important to them?</li>
+        <li>How does it impact our business?</li>
+        <li>What can you/your team do to build a positive relationship?</li>
+      </ul>
+      <p><strong>Additional Activity:</strong> <a href="https://www.mural.co/templates/stakeholder-mapping" target="_blank">Stakeholder Mapping Template</a></p>
     </div>
 
     <div class="week">
       <h4>Week 2: How to Build Positive Influence with Stakeholders</h4>
       <p><strong>Objective:</strong> Learn how to ethically shape influence through empathy, alignment, and timing.</p>
-      <p><strong>Video:</strong> Influence Isn’t Pressure — It’s Connection; How to Influence Your Stakeholders (Part 1)</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/Rab0hANPKRY')">How to Influence Your Stakeholders (Part 1)</a></p>
     </div>
 
     <div class="week">
       <h4>Week 3: Communicating Vision & Values to the Outside World</h4>
-      <p><strong>Objective:</strong> Learn how to communicate the company’s mission, strategy, and values to external partners.</p>
-      <p><strong>Video:</strong> How to Speak for the Organization; What Is Stakeholder Management?; How to Communicate and Influence Stakeholders</p>
-      <p><strong>Main Activity:</strong> Draft external communication piece sharing mission/values, external-fit, team reinforcement.</p>
+      <p><strong>Objective:</strong> Learn how to communicate the company’s mission, strategy, and Charter Values to external partners and understand how every role contributes to external brand and trust.</p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/pRQ5D4gbdAU')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/O-oSSWpQ-Dk')">Watch Video</a></p>
+      <p><strong>📝 Main Activity:</strong> Draft a short external communication piece (email, post, or speech snippet) that:</p>
+      <ul>
+        <li>Shares our mission/values</li>
+        <li>Is appropriate for an external audience</li>
+        <li>Includes how anyone on the team can reinforce it</li>
+      </ul>
     </div>
 
     <div class="week">
       <h4>Week 4: Representing the Company in External Spaces</h4>
       <p><strong>Objective:</strong> Learn how to engage new stakeholders and reinforce relationships.</p>
-      <p><strong>Video:</strong> What is Stakeholder Engagement?; Engaging Stakeholders</p>
-      <p><strong>Reading:</strong> Stakeholder Engagement: What It Means & Why It Matters</p>
-      <p><strong>Main Activity:</strong> Draft intro + one relationship-building comment for an external meeting simulation.</p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/VHGTsEwbOJY')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/MjTtN0D6zKk')">Watch Video</a></p>
+      <p><strong>📖 Reading:</strong> <a href="https://simplystakeholders.com/stakeholder-engagement/" target="_blank">Stakeholder Engagement Article</a></p>
+      <p><strong>📝 Main Activity:</strong> Simulate attending an external meeting (e.g., supplier pitch):</p>
+      <ul>
+        <li>Draft an introduction that positively represents the company</li>
+        <li>One question/comment to reinforce relationship</li>
+      </ul>
     </div>
 
     <div class="week">
       <h4>Week 5: Stakeholder Engagement in Complex Conversations</h4>
-      <p><strong>Objective:</strong> Build confidence in addressing sensitive or high-impact issues and align messaging.</p>
-      <p><strong>Video:</strong> Our Voice in the World: Navigating Complexity; How to Manage Difficult Stakeholders; How to Talk to Stakeholders; Managing Stakeholders Expectations</p>
-      <p><strong>Reading:</strong> Stakeholder Management Guide</p>
-      <p><strong>Quiz:</strong> Situational choices + chapter quiz</p>
-      <p><strong>Main Activity:</strong> Draft talking note on sensitive topic (acknowledge concerns, align position, trade-offs/next steps).</p>
+      <p><strong>Objective:</strong> Build confidence in addressing sensitive or high-impact issues and align messaging with company direction and stakeholder expectations.</p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/NaGhBpfZLzg')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/Kvhmzh7IG20')">Watch Video</a></p>
+      <p><strong>🎥 Video 3:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/JFt6-0NHxnM')">Watch Video</a></p>
+      <p><strong>📖 Reading:</strong> <a href="https://simplystakeholders.com/resources/guides/stakeholder-management/" target="_blank">Stakeholder Management Guide</a></p>
+      <p><strong>📝 Main Activity:</strong> Pick a sensitive topic (e.g., AI ethics). Draft a stakeholder talking note that:</p>
+      <ul>
+        <li>Acknowledges stakeholder concerns</li>
+        <li>Aligns our position</li>
+        <li>Presents any trade-offs/next steps</li>
+      </ul>
     </div>
 
     <div class="week">
       <h4>Week 6: Your Voice, Our Values</h4>
-      <p><strong>Objective:</strong> Reflect on your role in stakeholder engagement and create a practical plan or piece of communication.</p>
-      <p><strong>Video:</strong> Engaging Stakeholders: Strategies for Success; What Is A Stakeholder Engagement Plan?; Reviewing the Stakeholder Engagement Plan</p>
-      <p><strong>Main Activity:</strong> Create Stakeholder Engagement Plan: identify stakeholder, choose communication piece, trust-building actions.</p>
-      <p><strong>Other Handovers:</strong> <a href="https://www.nhselect.nhs.uk/uploads/files/1/Stakeholder%20Engagement%20Strategy%20Template.pdf" target="_blank">Stakeholder Engagement Strategy Template</a></p>
+      <p><strong>Objective:</strong> Reflect on your own role in stakeholder engagement and create a practical plan or piece of communication that supports your role.</p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/LRRJNlZVkKg')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/AVOUtPcJAMc')">Watch Video</a></p>
+      <p><strong>🎥 Video 3:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/P3vii5DklBs')">Watch Video</a></p>
+      <p><strong>📝 Main Activity:</strong> Create a Stakeholder Engagement Plan for your role:</p>
+      <ul>
+        <li>Identify one key stakeholder</li>
+        <li>Choose a communication piece or plan (e.g., email, meeting notes)</li>
+        <li>Include how you’ll build trust and promote our values</li>
+      </ul>
+      <p><a href="https://www.nhselect.nhs.uk/uploads/files/1/Stakeholder%20Engagement%20Strategy%20Template.pdf" target="_blank">Stakeholder Engagement Strategy Template (PDF)</a></p>
+      <p><strong>🧠 Google Form Submission Link:</strong> [Insert Google Form link here]</p>
     </div>
+
   </main>
+
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
