--- a/productivity-focus-course.html
+++ b/productivity-focus-course.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Productivity & Focus - Alpha Iota Short Courses</title>
+  <title>Mastering Execution & Productivity: Effective Work and Planning - Alpha Iota Short Courses</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -23,19 +23,8 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
     .section {
       padding: 2rem 1rem;
-    }
-    .instructions {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
     }
     .week {
       background-color: white;
@@ -47,7 +36,6 @@
     }
     .week h4 {
       color: var(--primary);
-      margin-bottom: 0.5rem;
     }
     .footer {
       background-color: var(--primary);
@@ -61,13 +49,13 @@
 <body>
 
   <header>
-    <h1><i class="fas fa-clock"></i> Productivity & Focus</h1>
-    <p>PROJECT CORE - Soft Skills Short Course - Research</p>
+    <h1><i class="fas fa-tasks"></i> Mastering Execution & Productivity: Effective Work and Planning</h1>
+    <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
   <main class="container section">
-    <div class="instructions">
-      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+    <div class="instructions" style="background: #fff3cd; border-left: 6px solid #ffc107; padding: 1rem; margin-bottom: 2rem; border-radius: 8px;">
+      <p><i class="fas fa-info-circle"></i> <strong>Please read before starting:</strong></p>
       <ul>
         <li>Complete each week in order — finish video, activity, and quiz.</li>
         <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
@@ -78,41 +66,76 @@
     </div>
 
     <div class="week">
-      <h4>Week 1: The Science of Productivity</h4>
-      <p><strong>Video:</strong> The Science of Productivity by AsapSCIENCE</p>
-      <p><strong>Other Handovers:</strong> One Page Pocket Productivity Planner</p>
+      <h4>Week 1: Introduction to Productivity & Execution</h4>
+      <p><strong>Objective:</strong> Understand core productivity principles and set personal goals.</p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/lHfjvYzr-3g')">The Science of Productivity</a></p>
+      <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/hjZa48umbTU')">One Page Pocket Productivity Planner</a></p>
+      <p><strong>📖 Reading:</strong> <a href="https://www.academia.edu/8954671/Brendon_Burchards_1_Page_Productivity_Planner" target="_blank">Brendon Burchard's 1-Page Productivity Planner</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeWWRu-HxIVe2eVC3aHoZ4KWX1_Bmlwzjc5NhNPq0irPTafQg/viewform?embedded=true')">Reflection Questions</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 2: The Eisenhower Matrix</h4>
-      <p><strong>Focus:</strong> Learn and apply the Eisenhower Matrix to prioritize tasks effectively.</p>
+      <h4>Week 2: Time Management & Prioritization</h4>
+      <p><strong>Objective:</strong> Learn prioritization techniques (Eisenhower Matrix).</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/MH7gWNOzDvc')">The Eisenhower Matrix</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfTEjWQR3QQvDgcezozJN7dYc_xkEwU3WHRojN_IJXr5I9byw/viewform?embedded=true')">Reflection Questions</a></p>
+      <p><strong>📄 Workbook:</strong> <a href="https://docs.google.com/spreadsheets/d/1sAVTYRrfhBPL6kgUofRuDuOCZ2ZS6iFz3pAuIpnUkTs/edit?usp=sharing" target="_blank">Time Management Eisenhower Workbook</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 3: Eat That Frog!</h4>
-      <p><strong>Focus:</strong> “Eat That Frog!” by Brian Tracy (Chapter Summary)</p>
-      <p><strong>Reading:</strong> <a href="https://docs.google.com/document/d/1BqedUysUz02jJBg1Bg6aH3mw4Q2O5Nq8DRp7KAwSO-w/edit?usp=sharing" target="_blank">Chapter Summary Document</a></p>
+      <h4>Week 3: Productivity</h4>
+      <p><strong>Objective:</strong> Learn ways to be more productive and efficient every day.</p>
+      <p><strong>📖 Reading:</strong> <a href="https://devchandra.com/blog/eat-that-frog-book-summary/" target="_blank">“Eat That Frog!” by Brian Tracy (Summary)</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeEuxKL0Ya5dNnPb97ufgMV2eq7MYx6HbpzSPlEI1GRW5-AvQ/viewform?embedded=true')">Week 3 Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 4: N/A</h4>
-      <p><strong>Note:</strong> No content for this week.</p>
+      <h4>Week 4: Real-World Productivity Challenge</h4>
+      <p><strong>Objective:</strong> Use effective productivity tools to manage priorities and plan your workweek in a realistic context.</p>
+      <p><strong>📝 Main Activity:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLScGQ-vJ_8Olndi2v7qoG6JZhwsAiNHknsjmMwcmUl3d4qtgzw/viewform?embedded=true')">Submit Activity</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 5: Inside the Mind of a Master Procrastinator</h4>
-      <p><strong>Video:</strong> Inside the Mind of a Master Procrastinator</p>
+      <h4>Week 5: Overcoming Procrastination</h4>
+      <p><strong>Objective:</strong> Identify procrastination triggers and apply anti-procrastination strategies.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/arj7oStGLkU')">Inside the Mind of a Master Procrastinator</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdCKF0IZ3PWJlul-BL-x44Dtcs1xYqGBhTbe92Pl8qXVz2qmQ/viewform?embedded=true')">Chapter Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 6: Success in a Distracted World</h4>
-      <p><strong>Reading/Concept:</strong> DEEP WORK by Cal Newport</p>
+      <h4>Week 6: Deep Work & the Power of Focus</h4>
+      <p><strong>Objective:</strong> To understand the principles of Deep Work and how focus impacts execution quality.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/gTaJhjQHcf8')">DEEP WORK by Cal Newport</a></p>
+      <p><strong>🧠 Essay / Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfpjwMCUEBPoMzLKvQLPl4qYw3uEesy4XrF7eLGTGY40J_oIA/viewform?embedded=true')">Submit Reflection</a></p>
     </div>
+
   </main>
+
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
