--- a/productivity-efficiency.html
+++ b/productivity-efficiency.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Productivity and Efficiency - Alpha Iota Short Courses</title>
+  <title>Mastering Execution & Productivity: Effective Work and Planning - Alpha Iota Short Courses</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -23,19 +23,8 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
     .section {
       padding: 2rem 1rem;
-    }
-    .instructions {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
     }
     .week {
       background-color: white;
@@ -44,14 +33,9 @@
       margin-bottom: 1.5rem;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s ease;
-    }
-    .week:hover {
-      transform: scale(1.02);
     }
     .week h4 {
       color: var(--primary);
-      margin-bottom: 0.5rem;
     }
     .footer {
       background-color: var(--primary);
@@ -65,63 +49,93 @@
 <body>
 
   <header>
-    <h1><i class="fas fa-chart-line"></i> Productivity and Efficiency</h1>
-    <p>Mastering Execution & Productivity — Soft Skills Short Course</p>
+    <h1><i class="fas fa-tasks"></i> Mastering Execution & Productivity: Effective Work and Planning</h1>
+    <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
   <main class="container section">
-    <div class="instructions">
-      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+    <div class="instructions" style="background: #fff3cd; border-left: 6px solid #ffc107; padding: 1rem; margin-bottom: 2rem; border-radius: 8px;">
+      <p><i class="fas fa-info-circle"></i> <strong>Please read before starting:</strong></p>
       <ul>
         <li>Complete each week in order — finish video, activity, and quiz.</li>
-        <li>Use the <strong>same email address</strong> across all submissions.</li>
-        <li>Click links below to view materials. Submit final outputs as instructed.</li>
+        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
+        <li>Fill out all required fields accurately for progress tracking.</li>
+        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
       </ul>
     </div>
 
-    <p class="mb-4"><strong>Status:</strong> In progress<br><strong>Course Format:</strong> 6 Weeks | Video + Activities + Quiz</p>
-
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 1: From Strategy to Execution – Aligning Direction with Action</h4>
-      <p><strong>🎥 Video:</strong> The Science of Taking Action | Steve Garguilo | TEDxCarthage</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
+      <h4>Week 1: Introduction to Productivity & Execution</h4>
+      <p><strong>Objective:</strong> Understand core productivity principles and set personal goals.</p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/lHfjvYzr-3g')">The Science of Productivity</a></p>
+      <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/hjZa48umbTU')">One Page Pocket Productivity Planner</a></p>
+      <p><strong>📖 Reading:</strong> <a href="https://www.academia.edu/8954671/Brendon_Burchards_1_Page_Productivity_Planner" target="_blank">Brendon Burchard's 1-Page Productivity Planner</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeWWRu-HxIVe2eVC3aHoZ4KWX1_Bmlwzjc5NhNPq0irPTafQg/viewform?embedded=true')">Reflection Questions</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 2: Visual Workflow & Execution Clarity</h4>
-      <p><strong>🎥 Video:</strong> What is Kanban? - Agile Coach</p>
-      <p><strong>🧠 Quiz:</strong> Reflection Question</p>
-      <p><strong>Other Handovers:</strong> Kanban Board (Google Sheets/Slides)</p>
+      <h4>Week 2: Time Management & Prioritization</h4>
+      <p><strong>Objective:</strong> Learn prioritization techniques (Eisenhower Matrix).</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/MH7gWNOzDvc')">The Eisenhower Matrix</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfTEjWQR3QQvDgcezozJN7dYc_xkEwU3WHRojN_IJXr5I9byw/viewform?embedded=true')">Reflection Questions</a></p>
+      <p><strong>📄 Workbook:</strong> <a href="https://docs.google.com/spreadsheets/d/1sAVTYRrfhBPL6kgUofRuDuOCZ2ZS6iFz3pAuIpnUkTs/edit?usp=sharing" target="_blank">Time Management Eisenhower Workbook</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 3: Practical Problem-Solving from Any Role</h4>
-      <p><strong>📖 Reading:</strong> Problem Solving Strategies</p>
-      <p><strong>🧠 Quiz:</strong> Week 3 Quiz</p>
+      <h4>Week 3: Productivity</h4>
+      <p><strong>Objective:</strong> Learn ways to be more productive and efficient every day.</p>
+      <p><strong>📖 Reading:</strong> <a href="https://devchandra.com/blog/eat-that-frog-book-summary/" target="_blank">“Eat That Frog!” by Brian Tracy (Summary)</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeEuxKL0Ya5dNnPb97ufgMV2eq7MYx6HbpzSPlEI1GRW5-AvQ/viewform?embedded=true')">Week 3 Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 4: Execution Excellence</h4>
-      <p><strong>📝 Activity:</strong> Create a prioritized to-do list using the Kanban Board Template</p>
-      <p><strong>Other Handovers:</strong> Kanban Board (Google Sheets/Slides)</p>
+      <h4>Week 4: Real-World Productivity Challenge</h4>
+      <p><strong>Objective:</strong> Use effective productivity tools to manage priorities and plan your workweek in a realistic context.</p>
+      <p><strong>📝 Main Activity:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLScGQ-vJ_8Olndi2v7qoG6JZhwsAiNHknsjmMwcmUl3d4qtgzw/viewform?embedded=true')">Submit Activity</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 5: Systems for Sustainable Productivity</h4>
-      <p><strong>🎥 Video:</strong> How to Build Your Ultimate Productivity System</p>
-      <p><strong>🧠 Quiz:</strong> Chapter quiz</p>
+      <h4>Week 5: Overcoming Procrastination</h4>
+      <p><strong>Objective:</strong> Identify procrastination triggers and apply anti-procrastination strategies.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/arj7oStGLkU')">Inside the Mind of a Master Procrastinator</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdCKF0IZ3PWJlul-BL-x44Dtcs1xYqGBhTbe92Pl8qXVz2qmQ/viewform?embedded=true')">Chapter Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4><i class="fas fa-calendar-week"></i> Week 6: Gaining and Sustaining Momentum</h4>
-      <p><strong>🎥 Video:</strong> Gaining and Sustaining Momentum</p>
-      <p><strong>📝 Activity:</strong> Essay — How will you sustain momentum in your productivity journey?</p>
+      <h4>Week 6: Deep Work & the Power of Focus</h4>
+      <p><strong>Objective:</strong> To understand the principles of Deep Work and how focus impacts execution quality.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/gTaJhjQHcf8')">DEEP WORK by Cal Newport</a></p>
+      <p><strong>🧠 Essay / Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfpjwMCUEBPoMzLKvQLPl4qYw3uEesy4XrF7eLGTGY40J_oIA/viewform?embedded=true')">Submit Reflection</a></p>
     </div>
+
   </main>
+
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
