--- a/productivity-efficiency.html
+++ b/productivity-efficiency.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mastering Execution & Productivity: Effective Work and Planning - Alpha Iota Short Courses</title>
+  <title>Mastering Execution & Productivity: From Strategy to Action - Alpha Iota Short Courses</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -49,7 +49,7 @@
 <body>
 
   <header>
-    <h1><i class="fas fa-tasks"></i> Mastering Execution & Productivity: Effective Work and Planning</h1>
+    <h1><i class="fas fa-project-diagram"></i> Mastering Execution & Productivity: From Strategy to Action</h1>
     <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
@@ -66,49 +66,49 @@
     </div>
 
     <div class="week">
-      <h4>Week 1: Introduction to Productivity & Execution</h4>
-      <p><strong>Objective:</strong> Understand core productivity principles and set personal goals.</p>
-      <p><strong>🎥 Video 1:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/lHfjvYzr-3g')">The Science of Productivity</a></p>
-      <p><strong>🎥 Video 2:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/hjZa48umbTU')">One Page Pocket Productivity Planner</a></p>
-      <p><strong>📖 Reading:</strong> <a href="https://www.academia.edu/8954671/Brendon_Burchards_1_Page_Productivity_Planner" target="_blank">Brendon Burchard's 1-Page Productivity Planner</a></p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeWWRu-HxIVe2eVC3aHoZ4KWX1_Bmlwzjc5NhNPq0irPTafQg/viewform?embedded=true')">Reflection Questions</a></p>
+      <h4>Week 1: From Strategy to Execution – Aligning Direction with Action</h4>
+      <p><strong>Objective:</strong> Understand how to break down high-level strategy into functional execution plans, identify strategic priorities, and align actions with performance outcomes.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/hn9so1zVfR0')">The Science of Taking Action | TEDx</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSd6XX0EwHOrI0CWdfNRCJphJJ0e_L1q-T36N7XBqXw5OJw0FA/viewform?embedded=true')">Reflection Question</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 2: Time Management & Prioritization</h4>
-      <p><strong>Objective:</strong> Learn prioritization techniques (Eisenhower Matrix).</p>
-      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/MH7gWNOzDvc')">The Eisenhower Matrix</a></p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfTEjWQR3QQvDgcezozJN7dYc_xkEwU3WHRojN_IJXr5I9byw/viewform?embedded=true')">Reflection Questions</a></p>
-      <p><strong>📄 Workbook:</strong> <a href="https://docs.google.com/spreadsheets/d/1sAVTYRrfhBPL6kgUofRuDuOCZ2ZS6iFz3pAuIpnUkTs/edit?usp=sharing" target="_blank">Time Management Eisenhower Workbook</a></p>
+      <h4>Week 2: Visual Workflow & Execution Clarity</h4>
+      <p><strong>Objective:</strong> Learn how to design and use visual workflow tools (like Kanban) to enhance team clarity, alignment, and execution efficiency.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/iVaFVa7HYj4')">What is Kanban? - Agile Coach</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSe6kKbxQOtAMqtqMys2thFyqmJsZfWZlj3qrchJ6Cl5LYDApg/viewform?embedded=true')">Reflection Question</a></p>
+      <p><strong>📄 Individual Kanban Board:</strong> <a href="https://docs.google.com/spreadsheets/d/1FT18H82kr10cPDELjYFsmOTyYXfbx1Ho9zYwt6LY8Qw/edit?gid=842917093#gid=842917093" target="_blank">Google Sheets</a></p>
+      <p><strong>📄 Team Kanban Board:</strong> <a href="https://docs.google.com/presentation/d/1mhr9nVql-Qa7ExFHoLD_vw5vPS4RA9y2ZGFSW37_iCY/edit?slide=id.p2#slide=id.p2" target="_blank">Google Slides</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 3: Productivity</h4>
-      <p><strong>Objective:</strong> Learn ways to be more productive and efficient every day.</p>
-      <p><strong>📖 Reading:</strong> <a href="https://devchandra.com/blog/eat-that-frog-book-summary/" target="_blank">“Eat That Frog!” by Brian Tracy (Summary)</a></p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeEuxKL0Ya5dNnPb97ufgMV2eq7MYx6HbpzSPlEI1GRW5-AvQ/viewform?embedded=true')">Week 3 Quiz</a></p>
+      <h4>Week 3: Practical Problem-Solving from Any Role</h4>
+      <p><strong>Objective:</strong> Empower individual contributors with clear, effective techniques to identify, analyze, and solve workplace problems—even without formal authority.</p>
+      <p><strong>📖 Reading:</strong> <a href="https://asana.com/resources/problem-solving-strategies" target="_blank">Problem Solving Strategies</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSc9NUzLn62VjIgg5lk84o1uu4kqD5kwKxyQxU003B57_dfZ6A/viewform?embedded=true')">Week 3 Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 4: Real-World Productivity Challenge</h4>
-      <p><strong>Objective:</strong> Use effective productivity tools to manage priorities and plan your workweek in a realistic context.</p>
-      <p><strong>📝 Main Activity:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLScGQ-vJ_8Olndi2v7qoG6JZhwsAiNHknsjmMwcmUl3d4qtgzw/viewform?embedded=true')">Submit Activity</a></p>
+      <h4>Week 4: Execution Excellence</h4>
+      <p><strong>Objective:</strong> Master designing and using visual workflow tools that maximize productivity and help focus on efficiency.</p>
+      <p><strong>📝 Main Activity:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSc6I2pJ_0y1yrLRP9kBBgkxNF0fVeWgwnVHaTB6nw7KDZ4obQ/viewform?embedded=true')">Submit To-Do List</a></p>
+      <p><strong>📄 Individual Kanban Board:</strong> <a href="https://docs.google.com/spreadsheets/d/1FT18H82kr10cPDELjYFsmOTyYXfbx1Ho9zYwt6LY8Qw/edit?gid=842917093#gid=842917093" target="_blank">Google Sheets</a></p>
+      <p><strong>📄 Team Kanban Board:</strong> <a href="https://docs.google.com/presentation/d/1mhr9nVql-Qa7ExFHoLD_vw5vPS4RA9y2ZGFSW37_iCY/edit?slide=id.p2#slide=id.p2" target="_blank">Google Slides</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 5: Overcoming Procrastination</h4>
-      <p><strong>Objective:</strong> Identify procrastination triggers and apply anti-procrastination strategies.</p>
-      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/arj7oStGLkU')">Inside the Mind of a Master Procrastinator</a></p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdCKF0IZ3PWJlul-BL-x44Dtcs1xYqGBhTbe92Pl8qXVz2qmQ/viewform?embedded=true')">Chapter Quiz</a></p>
+      <h4>Week 5: Systems for Sustainable Productivity</h4>
+      <p><strong>Objective:</strong> Explore tools and systems that make productivity sustainable over the long term (automation, batching, reflection).</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/T6hmdrsLQj8')">How to Build Your Ultimate Productivity System</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSemy7P4dfj-7dDmMCllrzr5u9bJNQHIx1Lh2Q1NzYbhVxP3yg/viewform?embedded=true')">Chapter Quiz</a></p>
     </div>
 
     <div class="week">
-      <h4>Week 6: Deep Work & the Power of Focus</h4>
-      <p><strong>Objective:</strong> To understand the principles of Deep Work and how focus impacts execution quality.</p>
-      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/gTaJhjQHcf8')">DEEP WORK by Cal Newport</a></p>
-      <p><strong>🧠 Essay / Quiz:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfpjwMCUEBPoMzLKvQLPl4qYw3uEesy4XrF7eLGTGY40J_oIA/viewform?embedded=true')">Submit Reflection</a></p>
+      <h4>Week 6: Gaining and Sustaining Momentum</h4>
+      <p><strong>Objective:</strong> Learn how to maintain productivity gains through regular reflection, constructive feedback, and iterative improvement.</p>
+      <p><strong>🎥 Video:</strong> <a href="#" onclick="openResource('https://www.youtube.com/embed/-ClXmNiVHbo')">Gaining and Sustaining Momentum</a></p>
+      <p><strong>📝 Essay:</strong> <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSeQfyN6Mi5lRaMEJnnn_hEfFhqJn-TMLJjsIIUnSZ7Bfte1RA/viewform?embedded=true')">Submit Essay</a></p>
     </div>
-
   </main>
 
   <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
